[tool.poetry]
name = "blind-75-algorithms"
version = "0.1.0"
description = ""
authors = ["Yinshangyi <jl.dejaeger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
